--- a/.github/workflows/lighthouse-ci.yml
+++ b/.github/workflows/lighthouse-ci.yml
@@ -1,7 +1,7 @@
 name: Lighthouse CI
 on:
   workflow_run:
-    workflows: [pages build and deployment]
+    workflows: [pages-build-deployment]
     types:
       - completed
 jobs:
