--- a/.github/workflows/lighthouse-ci.yml
+++ b/.github/workflows/lighthouse-ci.yml
@@ -12,6 +12,6 @@ jobs:
         with:
           node-version: 16
       - run: npm install -g @lhci/cli
-      - run: lhci collect --url=https://www.esna.cloud --collect.numberOfRuns=5
+      - run: lhci collect --url=https://www.esna.cloud --collect.numberOfRuns=5 --upload.target=temporary-public-storage
         env:
           LHCI_GITHUB_TOKEN: ${{ secrets.LHCI_GITHUB_TOKEN }}
