--- a/.github/workflows/lighthouse-ci.yml
+++ b/.github/workflows/lighthouse-ci.yml
@@ -12,8 +12,8 @@ jobs:
         with:
           node-version: 16
       - run: npm install -g @lhci/cli
-      - run: |
-          lhci collect --url=https://www.esna.cloud --collect.numberOfRuns=5
-          lhci upload --target=temporary-public-storage
+      - run: export LHCI_BUILD_CONTEXT__CURRENT_HASH=$(node -p "new Date().getTime().toString(16).split('').reverse().join('')")
+      - run: lhci collect --url=https://www.esna.cloud --collect.numberOfRuns=5
+      - run: lhci upload --target=temporary-public-storage
         env:
           LHCI_GITHUB_TOKEN: ${{ secrets.LHCI_GITHUB_TOKEN }}
