--- a/.github/workflows/lighthouse-ci.yml
+++ b/.github/workflows/lighthouse-ci.yml
@@ -12,8 +12,10 @@ jobs:
         with:
           node-version: 16
       - run: npm install -g @lhci/cli
-      - run: export LHCI_BUILD_CONTEXT__CURRENT_HASH=$(node -p "new Date().getTime().toString(16).split('').reverse().join('')")
-      - run: lhci collect --url=https://www.esna.cloud --collect.numberOfRuns=1
+      - run: |
+          LHCI_BUILD_CONTEXT__CURRENT_HASH=$(node -p "new Date().getTime().toString(16).split('').reverse().join('')")
+          echo $LHCI_BUILD_CONTEXT__CURRENT_HASH
+      - run: lhci collect --url=https://www.esna.cloud --collect.numberOfRuns=2
       - run: lhci upload --target=temporary-public-storage
         env:
           LHCI_GITHUB_TOKEN: ${{ secrets.LHCI_GITHUB_TOKEN }}
