--- a/.github/workflows/lighthouse-ci.yml
+++ b/.github/workflows/lighthouse-ci.yml
@@ -15,6 +15,7 @@ jobs:
       - run: |
           LHCI_BUILD_CONTEXT__CURRENT_HASH=$(node -p "new Date().getTime().toString(16).split('').reverse().join('')")
           echo $LHCI_BUILD_CONTEXT__CURRENT_HASH
+          export LHCI_BUILD_CONTEXT__CURRENT_HASH
       - run: lhci collect --url=https://www.esna.cloud --collect.numberOfRuns=2
       - run: lhci upload --target=temporary-public-storage
         env:
