--- a/.github/workflows/lighthouse-ci.yml
+++ b/.github/workflows/lighthouse-ci.yml
@@ -20,6 +20,7 @@ jobs:
       - run: npm install -g @lhci/cli
       - uses: actions/checkout@v3
       - run: |
+          git branch
           echo "LHCI_BUILD_CONTEXT__CURRENT_HASH=$(git log -1 --format:'%H' --first-parent $DEPLOY_BRANCH)" >> $GITHUB_ENV
           echo LHCI_BUILD_CONTEXT__CURRENT_HASH=$LHCI_BUILD_CONTEXT__CURRENT_HASH
       - run: lhci collect --url=$URL --collect.numberOfRuns=5
