--- a/.github/workflows/lighthouse-ci.yml
+++ b/.github/workflows/lighthouse-ci.yml
@@ -22,7 +22,7 @@ jobs:
           ref: gh-pages
       - run: |
           git branch
-          echo "LHCI_BUILD_CONTEXT__CURRENT_HASH=$(git log -1 --format:'%H')" >> $GITHUB_ENV
+          echo "LHCI_BUILD_CONTEXT__CURRENT_HASH=$(git log -1 --pretty=format:\"%H\")" >> $GITHUB_ENV
           echo LHCI_BUILD_CONTEXT__CURRENT_HASH=$LHCI_BUILD_CONTEXT__CURRENT_HASH
       - run: lhci collect --url=$URL --collect.numberOfRuns=5
       - run: lhci upload --target=temporary-public-storage
