--- a/.github/workflows/load-test.yml
+++ b/.github/workflows/load-test.yml
@@ -13,7 +13,9 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@v3
+        with:
+          ref: v11-react-step-3
 
       - name: Run local k6 test
         uses: grafana/k6-action@v0.2.0
