--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     ]
   },
   "prettier": {
-    "jsxBracketSameLine": true,
+    "bracketSameLine": true,
     "printWidth": 80,
     "singleQuote": true,
     "trailingComma": "es5"
